...
    if (!_skipButton) {
        _skipButton = [UIButton buttonWithType:UIButtonTypeCustom];
        _skipButton.frame = CGRectMake(255, 300, 60, 40);
        [_skipButton setBackgroundColor:[UIColor colorWithRed:0.00f green:0.68f blue:0.98f alpha:1.00f]];
        _skipButton.clipsToBounds = YES;
        _skipButton.layer.cornerRadius = 5.f;
        [_skipButton setTitle:@"SKIP" forState:UIControlStateNormal];
        [_skipButton addTarget:self action:@selector(tapButtonAction:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _skipButton;
}

- (NSMutableArray *)guideItems {
...
